--- a/test/core-test/core-test.csproj
+++ b/test/core-test/core-test.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\core.csproj" />
+  </ItemGroup>
 
 </Project>
