--- a/test/serialization-test/serialization-test.csproj
+++ b/test/serialization-test/serialization-test.csproj
@@ -12,5 +12,10 @@
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\core\core.csproj" />
+    <ProjectReference Include="..\..\src\serialization\serialization.csproj" />
+  </ItemGroup>
 
 </Project>
