--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -4,4 +4,9 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.IO.Pipelines" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
