--- a/src/Telefrek.Core.Messaging/Telefrek.Core.Messaging.csproj
+++ b/src/Telefrek.Core.Messaging/Telefrek.Core.Messaging.csproj
@@ -5,5 +5,11 @@
     <Version>0.0.1</Version>
     <PackageDescription>This package contains the async messaging patterns used by Telefrek</PackageDescription>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
+    <ProjectReference Include="..\Telefrek.Core\Telefrek.Core.csproj" />
+    <ProjectReference Include="..\Telefrek.Core.Json\Telefrek.Core.Json.csproj" />
+  </ItemGroup>
 
 </Project>
