Cleanup version and packaging
Missed the version update in the csproj as well as the need to move that to directory props for future usage.
Published packages based on this change, doesn't affect actual code

--- a/src/Telefrek.Core.Testing/Telefrek.Core.Testing.csproj
+++ b/src/Telefrek.Core.Testing/Telefrek.Core.Testing.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <IsTestProject>false</IsTestProject>
+    <PackageId>Telefrek.Core.Testing</PackageId>
+    <PackageDescription>This package contains the testing utilities and patterns used by Telefrek</PackageDescription>
   </PropertyGroup>
   
   <ItemGroup>
