--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -3,6 +3,9 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
+    <IsPackable>true</IsPackable>
+    <Version>0.0.2</Version>
+    <IsTestProject>false</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
